...
import com.nagopy.android.foldlytics.labelRes
import com.nagopy.android.foldlytics.model.AnalysisPeriod
import com.nagopy.android.foldlytics.toShortDateText
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.withContext

internal const val SUMMARY_SHARE_BUTTON_TAG = "summary_share_button"
internal const val SUMMARY_CARD_TAG = "summary_card"
internal const val HOME_APP_USAGE_LINK_TAG = "home_app_usage_link"
internal const val HOME_INNER_SESSIONS_LINK_TAG = "home_inner_sessions_link"
internal const val APP_USAGE_SCREEN_TAG = "app_usage_screen"
internal const val APP_USAGE_CARD_TAG_PREFIX = "app_usage_card_"
internal const val INNER_DISPLAY_SESSION_SCREEN_TAG = "inner_display_session_screen"
...
